--- a/eventyay/eventyay_common/templates/eventyay_common/auth/invite.html
+++ b/eventyay/eventyay_common/templates/eventyay_common/auth/invite.html
@@ -1,4 +1,4 @@
-{% extends "pretixcontrol/auth/base.html" %}
+{% extends "eventyay_common/auth/base.html" %}
 {% load bootstrap3 %}
 {% load static %}
 {% load i18n %}
@@ -6,7 +6,7 @@
 	<form class="form-signin" action="" method="post">
         <h3>{% trans "Accept an invitation" %}</h3>
         <p>
-            {% url "control:auth.login" as loginurl %}
+            {% url "auth.login" as loginurl %}
             {% blocktrans trimmed with login_href='href="'|add:loginurl|add:'"'|safe %}
                 If you already have an account on this site with a different email address, you can
                 <a {{ login_href }}>log in</a> first and then click this link again to accept the
@@ -19,7 +19,7 @@
 		{% bootstrap_field form.password %}
         {% bootstrap_field form.password_repeat %}
 		<div class="form-group buttons">
-            <a href="{% url "control:auth.login" %}" class="btn btn-link">
+            <a href="{% url "auth.login" %}" class="btn btn-link">
                 &laquo; {% trans "Login" %}
             </a>
 
