--- a/eventyay/eventyay_common/templates/eventyay_common/auth/base.html
+++ b/eventyay/eventyay_common/templates/eventyay_common/auth/base.html
@@ -26,17 +26,17 @@
     {% endif %}
     <link rel="apple-touch-icon" sizes="180x180" href="{% static "pretixbase/img/icons/apple-touch-icon.png" %}">
     <link rel="icon" type="image/png" sizes="192x192" href="{% static "pretixbase/img/icons/android-chrome-192x192.png" %}">
-    <link rel="manifest" href="{% url "presale:site.webmanifest" %}">
+    {% comment %} <link rel="manifest" href="{% url "presale:site.webmanifest" %}"> {% endcomment %}
     <link rel="mask-icon" href="{% static "pretixbase/img/icons/safari-pinned-tab.svg" %}" color="#2185d0">
     <meta name="msapplication-TileColor" content="#2185d0">
-    <meta name="msapplication-config" content="{% url "presale:browserconfig.xml" %}">
+    {% comment %} <meta name="msapplication-config" content="{% url "presale:browserconfig.xml" %}"> {% endcomment %}
     <meta name="theme-color" content="#2185d0">
 </head>
 <body>
     <div id="wrapper">
         <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
             <div class="navbar-header">
-                <a class="navbar-brand" href='{% url "control:index" %}'>
+                <a class="navbar-brand" href='{% url "index" %}'>
                     <img src='{% static "pretixbase/img/eventyay-icon.svg" %}' />
                     {{ django_settings.INSTANCE_NAME }}
                 </a>
@@ -55,7 +55,7 @@
         </nav>
     </div>
 <div class="container">
-    <a href="{% url "control:auth.login" %}">
+    <a href="{% url "auth.login" %}">
         <img src="{% static "pretixbase/img/eventyay-logo.svg" %}" class="logo"/>
     </a>
     {% if messages %}
@@ -70,7 +70,7 @@
             <span class="fa fa-user-secret"></span>
             {% blocktrans with user=request.user%}You are currently working on behalf of {{ user }}.{% endblocktrans %}
 
-            <form action="{% url 'control:admin.users.impersonate.stop' %}" method="post" class="helper-display-inline">
+            <form action="{% url 'admin.users.impersonate.stop' %}" method="post" class="helper-display-inline">
                 {% csrf_token %}
                 <button class="btn btn-default btn-sm">
                     {% trans "Stop impersonating" %}
