--- a/eventyay/eventyay_common/templates/eventyay_common/auth/recover.html
+++ b/eventyay/eventyay_common/templates/eventyay_common/auth/recover.html
@@ -1,4 +1,4 @@
-{% extends "pretixcontrol/auth/base.html" %}
+{% extends "eventyay_common/auth/base.html" %}
 {% load bootstrap3 %}
 {% load static %}
 {% load i18n %}
