--- a/eventyay/eventyay_common/templates/eventyay_common/auth/base.html
+++ b/eventyay/eventyay_common/templates/eventyay_common/auth/base.html
@@ -38,7 +38,7 @@
             <div class="navbar-header">
                 <a class="navbar-brand" href='{% url "index" %}'>
                     <img src='{% static "pretixbase/img/eventyay-icon.svg" %}' />
-                    {{ django_settings.INSTANCE_NAME }}
+                    {{ INSTANCE_NAME }}
                 </a>
             </div>
             <ul class="nav navbar-nav navbar-top-links navbar-right flip">
