--- a/src/pretix/presale/templates/pretixpresale/event/order.html
+++ b/src/pretix/presale/templates/pretixpresale/event/order.html
@@ -181,6 +181,7 @@
             </div>
         {% endif %}
     {% endif %}
+    {% include "pretixpresale/event/fragment_nav.html" %}
     {% include "pretixpresale/event/fragment_downloads.html" with position_page=False %}
     <div class="panel panel-primary cart">
         <div class="panel-heading">
