--- a/eventyay/eventyay_common/templates/eventyay_common/auth/login.html
+++ b/eventyay/eventyay_common/templates/eventyay_common/auth/login.html
@@ -36,12 +36,12 @@
                 {% endif %}
                 {% if backend.identifier == "native" %}
                     {% if can_reset %}
-                        <a href="{% url "common:auth.forgot" %}" class="btn btn-link btn-block">
+                        <a href="{% url "eventyay_common:auth.forgot" %}" class="btn btn-link btn-block">
                             {% translate "Lost password?" %}
                         </a>
                     {% endif %}
                     {% if can_register %}
-                        <a href='{% url "common:auth.register" %}{% append_next request.GET.next %}' class="btn btn-link btn-block">
+                        <a href='{% url "eventyay_common:auth.register" %}{% append_next request.GET.next %}' class="btn btn-link btn-block">
                             {% translate "Register" %}
                         </a>
                     {% endif %}
