--- a/eventyay/eventyay_common/templates/eventyay_common/auth/register.html
+++ b/eventyay/eventyay_common/templates/eventyay_common/auth/register.html
@@ -25,7 +25,7 @@
             {% bootstrap_field form.keep_logged_in %}
         {% endif %}
         <div class="form-group buttons">
-            <a href="{% url "common:auth.login" %}" class="btn btn-link">
+            <a href="{% url "eventyay_common:auth.login" %}" class="btn btn-link">
                 &laquo; {% translate "Login" %}
             </a>
 
