--- a/eventyay/eventyay_common/templates/eventyay_common/auth/base.html
+++ b/eventyay/eventyay_common/templates/eventyay_common/auth/base.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html{% if rtl %} dir="rtl" class="rtl"{% endif %}>
 <head>
-    <title>{{ django_settings.INSTANCE_NAME }}</title>
+    <title>{{ INSTANCE_NAME }}</title>
     {% compress css %}
         <link rel="stylesheet" type="text/x-scss" href="{% static "pretixcontrol/scss/auth.scss" %}"/>
         <link rel="stylesheet" type="text/x-scss" href="{% static "pretixcontrol/scss/main.scss" %}" />
@@ -26,19 +26,19 @@
     {% endif %}
     <link rel="apple-touch-icon" sizes="180x180" href="{% static "pretixbase/img/icons/apple-touch-icon.png" %}">
     <link rel="icon" type="image/png" sizes="192x192" href="{% static "pretixbase/img/icons/android-chrome-192x192.png" %}">
-    <link rel="manifest" href="{% url "presale:site.webmanifest" %}">
+    {% comment %} <link rel="manifest" href="{% url "presale:site.webmanifest" %}"> {% endcomment %}
     <link rel="mask-icon" href="{% static "pretixbase/img/icons/safari-pinned-tab.svg" %}" color="#2185d0">
     <meta name="msapplication-TileColor" content="#2185d0">
-    <meta name="msapplication-config" content="{% url "presale:browserconfig.xml" %}">
+    {% comment %} <meta name="msapplication-config" content="{% url "presale:browserconfig.xml" %}"> {% endcomment %}
     <meta name="theme-color" content="#2185d0">
 </head>
 <body>
     <div id="wrapper">
         <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
             <div class="navbar-header">
-                <a class="navbar-brand" href='{% url "control:index" %}'>
+                <a class="navbar-brand" href='{% url "eventyay_common:dashboard" %}'>
                     <img src='{% static "pretixbase/img/eventyay-icon.svg" %}' />
-                    {{ django_settings.INSTANCE_NAME }}
+                    {{ INSTANCE_NAME }}
                 </a>
             </div>
             <ul class="nav navbar-nav navbar-top-links navbar-right flip">
@@ -55,7 +55,7 @@
         </nav>
     </div>
 <div class="container">
-    <a href="{% url "control:auth.login" %}">
+    <a href="{% url "eventyay_common:auth.login" %}">
         <img src="{% static "pretixbase/img/eventyay-logo.svg" %}" class="logo"/>
     </a>
     {% if messages %}
@@ -65,19 +65,19 @@
             </div>
         {% endfor %}
     {% endif %}
-    {% if request.user.is_hijacked %}
+    {% comment %} {% if request.user.is_hijacked %}
         <div class="impersonate-warning">
             <span class="fa fa-user-secret"></span>
             {% blocktrans with user=request.user%}You are currently working on behalf of {{ user }}.{% endblocktrans %}
 
-            <form action="{% url 'control:admin.users.impersonate.stop' %}" method="post" class="helper-display-inline">
+            <form action="{% url 'admin.users.impersonate.stop' %}" method="post" class="helper-display-inline">
                 {% csrf_token %}
                 <button class="btn btn-default btn-sm">
-                    {% trans "Stop impersonating" %}
+                    {% translate "Stop impersonating" %}
                 </button>
             </form>
         </div>
-    {% endif %}
+    {% endif %} {% endcomment %}
 
     {% block content %}
     {% endblock %}
