--- a/eventyay/control/templates/control/event_clear.html
+++ b/eventyay/control/templates/control/event_clear.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block content %}
-<h1>{% trans "Delete world data" %}</h1>
+<h1>{% trans "Delete event data" %}</h1>
 <form method="post">
     {% csrf_token %}
     <label>
