--- a/eventyay/control/templates/control/event_create.html
+++ b/eventyay/control/templates/control/event_create.html
@@ -3,7 +3,7 @@
 {% load formset_tags %}
 
 {% block content %}
-<h1>{% trans "Create world" %}</h1>
+<h1>{% trans "Create event" %}</h1>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
