--- a/eventyay/control/templates/control/event_list.html
+++ b/eventyay/control/templates/control/event_list.html
@@ -4,8 +4,8 @@
 {% block content %}
 
 <p>
-    <a href="{% url "control:world.create" %}" class="btn">
-    {% trans "Add new world" %}
+    <a href="{% url "control:event.create" %}" class="btn">
+    {% trans "Add new event" %}
     </a>
 </p>
 <table>
@@ -22,49 +22,49 @@
     </tr>
     </thead>
     <tbody>
-    {% for world in worlds %}
-    <tr class="{% if not world.domain %}deleted{% endif %}">
+    {% for event in events %}
+    <tr class="{% if not event.domain %}deleted{% endif %}">
         <td>
-            <b>{{ world.pk }}</b>
+            <b>{{ event.pk }}</b>
         </td>
         <td>
-            {{ world.title }}
-            {% for u in world.planned_usages.all %}
+            {{ event.title }}
+            {% for u in event.planned_usages.all %}
                 <br>
                 <small class="text-muted">{{ u.start|date:"SHORT_DATE_FORMAT" }} – {{ u.end|date:"SHORT_DATE_FORMAT" }} ({{ u.attendees }}ppl)</small>
             {% endfor %}
         </td>
         <td>
-            {% if world.domain %}
-            <a href="https://{{ world.domain }}" target="_blank">
-                {{ world.domain }}
+            {% if event.domain %}
+            <a href="https://{{ event.domain }}" target="_blank">
+                {{ event.domain }}
             </a>
             {% endif %}
         </td>
         <td class="text-right">
-            {{ world.user_count }}
+            {{ event.user_count }}
         </td>
         <td class="text-right">
-            {% if world.user_count %}
-            <a href="{% url 'control:world.clear' pk=world.pk %}">
+            {% if event.user_count %}
+            <a href="{% url 'control:event.clear' pk=event.pk %}">
                 {% trans "Delete data" %}
             </a>
             {% endif %}
         </td>
         <td class="text-right">
-            {% if world.domain and world.admin_token %}
-                <a href="{% url 'control:world.admin' pk=world.pk %}">
+            {% if event.domain and event.admin_token %}
+                <a href="{% url 'control:event.admin' pk=event.pk %}">
                     {% trans "Admin access" %}
                 </a>
             {% endif %}
         </td>
         <td class="text-right">
-            <a href="{% url 'control:world.create' %}?copy_from={{ world.pk|urlencode }}">
+            <a href="{% url 'control:event.create' %}?copy_from={{ event.pk|urlencode }}">
                 {% trans "Clone" %}
             </a>
         </td>
         <td class="text-right">
-            <a href="{% url 'control:world.update' pk=world.pk %}">
+            <a href="{% url 'control:event.update' pk=event.pk %}">
                 {% trans "Edit" %}
             </a>
         </td>
