--- a/src/pretix/presale/templates/pretixpresale/event/fragment_cart.html
+++ b/src/pretix/presale/templates/pretixpresale/event/fragment_cart.html
@@ -95,7 +95,7 @@
                     {% endif %}
                     {% for q in line.questions %}
                         {% if q.type != "DES" %}
-                            <dt>{{ q.question }}</dt>
+                            <dt>{{ q.question|rich_text_snippet }}</dt>
                             <dd>
                                 {% if q.answer %}
                                     {% if q.answer.file %}
@@ -115,7 +115,7 @@
                         {% endif %}
                     {% endfor %}
                     {% for q in line.additional_answers %}
-                        <dt>{{ q.question }}</dt>
+                        <dt>{{ q.question|rich_text_snippet }}</dt>
                         <dd>{% if q.answer %}{{ q.answer|linebreaksbr }}{% else %}<em>{% trans "not answered" %}</em>{% endif %}</dd>
                     {% endfor %}
                 </dl>
